--- a/coast.html
+++ b/coast.html
@@ -14,5 +14,9 @@
             <li><a href="coast.html">coast</a></li>
         </ul>
     </nav>
+    
+    <section>
+        <figure><img src="assets/images/beach.jpg" alt="image of Dublin beach"></figure>
+    </section>
 </body>
 </html>
